[gd_scene load_steps=3 format=2]

[ext_resource path="res://Script/Lock_Value.gd" type="Script" id=1]
[ext_resource path="res://Script/Export_Godot_config.gd" type="Script" id=2]

[node name="Export_Godot_config" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color( 1, 1, 1, 0.537255 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="PanelContainer" parent="."]
anchor_left = 0.30625
anchor_top = 0.166667
anchor_right = 0.69375
anchor_bottom = 0.833333
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Vbox" type="VBoxContainer" parent="Panel"]
margin_left = 5.808
margin_top = 4.048
margin_right = 490.192
margin_bottom = 475.952

[node name="Tittle" type="Label" parent="Panel/Vbox"]
margin_top = -1.0
margin_right = 484.0
margin_bottom = 26.04
text = "EXPORT TSCN"
align = 1
valign = 1

[node name="Panel" type="PanelContainer" parent="Panel/Vbox"]
margin_top = 30.0
margin_right = 484.0
margin_bottom = 440.0
size_flags_vertical = 3

[node name="Options" type="VBoxContainer" parent="Panel/Vbox/Panel"]
margin_left = 5.808
margin_top = 4.048
margin_right = 478.192
margin_bottom = 405.952

[node name="Collision" type="VBoxContainer" parent="Panel/Vbox/Panel/Options"]
margin_right = 472.0
margin_bottom = 89.0

[node name="Tittle" type="Label" parent="Panel/Vbox/Panel/Options/Collision"]
margin_top = -1.0
margin_right = 472.0
margin_bottom = 26.04
text = "COLLISION:"

[node name="Collision" type="CheckButton" parent="Panel/Vbox/Panel/Options/Collision"]
margin_top = 30.0
margin_right = 472.0
margin_bottom = 58.096
mouse_default_cursor_shape = 2
disabled = true
text = "COLLISION ENABLED"
script = ExtResource( 1 )
Node_Path = NodePath("../CollisionMode")
my_propriety = "pressed"
his_propriety = "disabled"
negative = true

[node name="CollisionMode" type="OptionButton" parent="Panel/Vbox/Panel/Options/Collision"]
margin_top = 61.0
margin_right = 472.0
margin_bottom = 89.096
hint_tooltip = "Recomendo usar \"Apenas um static body\", em um sistema de colisão é o mais perfomatico."
mouse_default_cursor_shape = 2
disabled = true
text = "ONLY ONE STATIC BODY"
items = [ "ONLY ONE STATIC BODY", null, false, 0, null, "STATIC BODY IN EACH BLOCK", null, true, 1, null, "ONLY COLLISION SHAPE", null, true, 2, null ]
selected = 0

[node name="HSeparator" type="HSeparator" parent="Panel/Vbox/Panel/Options"]
margin_top = 92.0
margin_right = 472.0
margin_bottom = 96.0

[node name="Light" type="VBoxContainer" parent="Panel/Vbox/Panel/Options"]
margin_top = 99.0
margin_right = 472.0
margin_bottom = 157.0

[node name="Tittle" type="Label" parent="Panel/Vbox/Panel/Options/Light"]
margin_top = -1.0
margin_right = 472.0
margin_bottom = 26.04
text = "LIGHT:"

[node name="Light" type="CheckButton" parent="Panel/Vbox/Panel/Options/Light"]
margin_top = 30.0
margin_right = 472.0
margin_bottom = 58.096
mouse_default_cursor_shape = 2
pressed = true
text = "EXPORT LIGHT"

[node name="HSeparator2" type="HSeparator" parent="Panel/Vbox/Panel/Options"]
margin_top = 160.0
margin_right = 472.0
margin_bottom = 164.0

[node name="Mesh" type="VBoxContainer" parent="Panel/Vbox/Panel/Options"]
margin_top = 167.0
margin_right = 472.0
margin_bottom = 256.0

[node name="Tittle" type="Label" parent="Panel/Vbox/Panel/Options/Mesh"]
margin_top = -1.0
margin_right = 472.0
margin_bottom = 26.04
text = "TILE:"

[node name="Tile" type="CheckButton" parent="Panel/Vbox/Panel/Options/Mesh"]
margin_top = 30.0
margin_right = 472.0
margin_bottom = 58.096
mouse_default_cursor_shape = 2
pressed = true
text = "EXPORT TILE"
script = ExtResource( 1 )
Node_Path = NodePath("../Hbox/TileMode")
my_propriety = "pressed"
his_propriety = "disabled"
negative = true

[node name="Hbox" type="HBoxContainer" parent="Panel/Vbox/Panel/Options/Mesh"]
margin_top = 61.0
margin_right = 472.0
margin_bottom = 89.0

[node name="Label" type="Label" parent="Panel/Vbox/Panel/Options/Mesh/Hbox"]
margin_right = 117.04
margin_bottom = 27.04
text = "HIERARQUIA:"

[node name="TileMode" type="OptionButton" parent="Panel/Vbox/Panel/Options/Mesh/Hbox"]
margin_left = 120.0
margin_right = 472.0
margin_bottom = 28.096
hint_tooltip = "Recomendo usar \"Apenas um static body\", em um sistema de colisão é o mais perfomatico."
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "ALL IN ONE"
items = [ "ALL IN ONE", null, false, 0, null, "SEPARATED BY GROUP", null, true, 1, null, "SEPARATED BY TILE", null, true, 2, null ]
selected = 0

[node name="HSeparator3" type="HSeparator" parent="Panel/Vbox/Panel/Options"]
margin_top = 259.0
margin_right = 472.0
margin_bottom = 263.0

[node name="Export" type="Button" parent="Panel/Vbox"]
margin_top = 443.0
margin_right = 484.0
margin_bottom = 471.096
mouse_default_cursor_shape = 2
text = "EXPORT TSCN"

[connection signal="pressed" from="Panel/Vbox/Export" to="." method="_on_Export_pressed"]
